--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.81.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "lucide-react": "^0.482.0",
     "next": "^15.2.4",
     "next-sanity": "^9.9.6",
